feat: enhance codebase indexing with advanced code parsing and incremental updates
- Add Roslyn-based C# code parser for semantic-aware chunking
- Implement incremental indexing with file modification tracking
- Introduce parallel processing and batch embedding for performance
- Extend CodeChunk model with metadata (function, class, language, tags)
- Add support for multiple file types (HTML, JS, Python, etc.) with language-specific parsing
- Integrate CrawlerFactory for project-type detection and appropriate crawler selection
- Update TextRepository to use vector database abstraction instead of direct PostgreSQL
- Add database schema extraction capabilities for SQL databases
- Improve RagService context building with rich metadata

BREAKING CHANGE: TextRepository constructor now requires IVectorDbService and IEmbeddingService instead of connection string; StoreTextAsync method signature changed to accept CodeChunk instead of string.

--- a/CodebaseRAG.Api/appsettings.json
+++ b/CodebaseRAG.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PostgreSQL": "Host=your-neon-host;Database=your-db;Username=your-user;Password=your-password"
+    "PostgreSQL": "Host=localhost;Database=codebaserag;Username=postgres;Password=password"
   },
   "AllowedHosts": "*",
   "Ollama": {
@@ -17,5 +17,20 @@
     "MaxRetries": 3,
     "RetryDelaySeconds": 2,
     "FallbackEmbeddingDimension": 384
+  },
+  "Indexing": {
+    "MaxParallelism": 4,
+    "EmbeddingBatchSize": 50,
+    "MaxFileSizeMB": 1,
+    "ChunkSize": 2000
+  },
+  "Database": {
+    "ExtractSchema": false,
+    "ExtractStoredProcedures": false,
+    "ConnectionStrings": {
+      "SqlServer": "",
+      "PostgreSQL": "",
+      "MySQL": ""
+    }
   }
 }
